--- a/sass/modules/_list-item.scss
+++ b/sass/modules/_list-item.scss
@@ -5,6 +5,9 @@
     gap: 24px;
     margin-bottom: 45px;
 
+    @include rmaxwd(991) {
+        margin-bottom: 20px;
+    }
     .icon {
         width: 54px;
         height: 54px;
@@ -15,6 +18,11 @@
         justify-content: center;
         flex-shrink: 0;
 
+        @include rmaxwd(991) {
+            width: 40px;
+            height: 40px;
+            font-size: 16px;
+        }
         @include rmaxwd(767) {
             width: 35px;
             height: 35px;
