--- a/sass/pages/_home-one.scss
+++ b/sass/pages/_home-one.scss
@@ -159,7 +159,7 @@
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
-  padding: 133px 0;
+  padding: 144px 0;
   position: relative;
   z-index: 2;
 
