--- a/sass/pages/_pricing-page.scss
+++ b/sass/pages/_pricing-page.scss
@@ -1,7 +1,7 @@
 .pricing-page-price-card-wrapper {
     background-color: $gray-50;
-    padding-top: 132px;
-    padding-bottom: 149px;
+    padding-top: 140px;
+    padding-bottom: 140px;
 
     @include rmaxwd(991) {
         padding: 100px 0;
